bpo-35502: Fix reference leaks in ElementTree.TreeBuilder. (GH-11170)

(cherry picked from commit d2a75c67830d7c9f59e4e9b60f36974234c829ef)

Co-authored-by: Serhiy Storchaka <storchaka@gmail.com>